[gd_scene load_steps=10 format=3 uid="uid://cu2yw66jdr2hs"]

[ext_resource type="Script" uid="uid://cgojw7eq1k5fw" path="res://Scripts/up_arrow.gd" id="1_y5x7m"]
[ext_resource type="AudioStream" uid="uid://cosc81evi4ud" path="res://SFX/spacebar-click-keyboard-199448_iju6vpxH.mp3" id="2_cuwvj"]
[ext_resource type="Texture2D" uid="uid://cnk0tx1pg0vka" path="res://Art/Buttons/plus keycap button-Sheet.png" id="3_y5x7m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ii0dh"]
size = Vector2(16, 6.92971)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gw0jb"]
size = Vector2(16, 9.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ab23"]
size = Vector2(16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuwvj"]
atlas = ExtResource("3_y5x7m")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4tnt"]
atlas = ExtResource("3_y5x7m")
region = Rect2(0, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_c1s5a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuwvj")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4tnt")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}]

[node name="UpArrow" type="StaticBody2D"]
position = Vector2(0, 26)
scale = Vector2(8.065, 8.065)
script = ExtResource("1_y5x7m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.464856)
shape = SubResource("RectangleShape2D_ii0dh")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -1.0625)
shape = SubResource("RectangleShape2D_gw0jb")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_3ab23")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_cuwvj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.25, -3.875)
scale = Vector2(0.0917969, 0.124023)
sprite_frames = SubResource("SpriteFrames_c1s5a")
animation = &"Up"

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
